--- a/HomeWork_S_Horiunov/css/style.css
+++ b/HomeWork_S_Horiunov/css/style.css
@@ -1,6 +1,6 @@
 body {
     margin-left: 30px;
-}
+    }
 
 h1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -11,4 +11,46 @@ h2 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: rgb(51, 112, 233);
     ;
+}
+
+form {
+    width: 32%;
+    padding: 12px;
+    border-radius: 4px;
+    background-color: #d8dfdf;
+}
+
+label {
+    font-weight: 600;
+    margin-bottom: 12px;
+}
+
+input {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 2px solid rgb(19, 4, 133);
+    border-radius: 4px;
+    background-color: #5bcce0;
+    color: white;
+}
+
+input[type=text]:focus {
+    background-color: lightblue;
+    color:black;
+}
+
+input[type=number]:focus {
+    background-color: #f1de2b;
+    color:black;
+}
+
+select {
+    width: 100%;
+    margin-top: 8px;
+    padding: 14px 20px;
+    border: none;
+    border-radius: 4px;
+    background-color: #bcdbef;
 }
